--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <base href="/vue-vuetify-test/">  
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--<link href="https://unpkg.com/vuetify@3.3.3/dist/vuetify.min.css" rel="stylesheet">-->
