--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--<link href="https://unpkg.com/vuetify@3.3.3/dist/vuetify.min.css" rel="stylesheet">-->
-    <link href="https://unpkg.com/vuetify@3.3.23/dist/vuetify-labs.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/vuetify@3.5.2/dist/vuetify.min.css" rel="stylesheet">-
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@7.x/css/materialdesignicons.min.css" rel="stylesheet">
     <script type="importmap">
         {
             "imports": {
                 "vue": "https://unpkg.com/vue@3/dist/vue.esm-browser.js",
-                "vuetify-labs": "https://unpkg.com/vuetify@3.3.23/dist/vuetify-labs.esm.js",
-                "vue-router": "https://unpkg.com/vue-router@4.2.4/dist/vue-router.esm-browser.js",
-                "@vue/devtools-api": "https://unpkg.com/@vue/devtools-api@6.5.0/lib/esm/index.js",
-                "ky": "https://www.unpkg.com/ky@1.0.1"
+                "vuetify": "https://unpkg.com/vuetify@3.5.2/dist/vuetify.esm.js",
+                "vue-router": "https://unpkg.com/vue-router@4.2.5/dist/vue-router.esm-browser.js",
+                "@vue/devtools-api": "https://unpkg.com/@vue/devtools-api@6.5.1/lib/esm/index.js",
+                "ky": "https://www.unpkg.com/ky@1.2.0"
             }
         }
     </script>
